--- a/_includes/coding_activity.html
+++ b/_includes/coding_activity.html
@@ -1,9 +1,9 @@
 <!-- Wakatime ( Replace with your own wakatime embed config at https://wakatime.com )-->
 
 <!-- Languages  -->
-<figure><embed src="https://wakatime.com/share/@sujaykundu777/e4c2a44e-390d-41f3-a4c8-b23b05fbec30.svg"></embed></figure>
+<figure><embed src="https://wakatime.com/share/@snukem/a363cb1c-0fde-4d33-b7db-475e3f729c03.svg"></embed></figure>
 
 <!-- Hours Coded -->
-<figure>
-    <embed src="https://wakatime.com/share/@sujaykundu777/5fcfa63e-9357-44d1-9a49-5244504a1f13.svg"></embed>
-</figure>
+<!-- <figure> -->
+<!--    <embed src="https://wakatime.com/share/@sujaykundu777/5fcfa63e-9357-44d1-9a49-5244504a1f13.svg"></embed> -->
+<!-- </figure> -->
