--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -129,11 +129,18 @@ layout: default
           <h4 class="experience-title">{{ project.project_title }}</h4>
           <h6 class="experience-info">{{ project.project_info}}</h6>
           <p class="experience-desc">{{ project.project_description }}</p>
-          <p>
-            <a class="project-link" href="{{project.project_url}}"
-              >{{ project.project_url}}</a
+            {% for url in project.project_url %}
+            <p>
+              <a class="project-link" href="{{url.link}}"
+              >{{ url.name}}</a
             >
-          </p>
+            </p>
+            {% endfor %}
+          <!-- <p>
+            <a class="project-link" href="{{project.project_url}}"
+              >{{ project.project_url_name}}</a
+            >
+          </p> -->
         </div>
       </div>
       <br />
