--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,6 +10,7 @@ layout: default
 
   <h1>{{ site.title }}</h1>
   {% if site.theme_config.show_description == true %}
+  <img src="images/rabbithole.jpg" alt="A vortex">
     <p>{{ site.description }}</p>
   {% endif %}
 </header>
